@@ -370,8 +370,8 @@ MonoBehaviour:
   currentSkill: -1
   _effectMount: {fileID: 4865927262245974}
   _gold: 0
-  nameOverlay: {fileID: 10219262}
-  stunnedOverlay: {fileID: 102122168017800360}
+  nameOverlay: {fileID: 0}
+  stunnedOverlay: {fileID: 0}
   inSafeZone: 0
   moveProbability: 0
   moveDistance: 10
@@ -1200,7 +1200,7 @@ GameObject:
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
   m_StaticEditorFlags: 0
-  m_IsActive: 1
+  m_IsActive: 0
 --- !u!1 &1371070831011314
 GameObject:
   m_ObjectHideFlags: 1
@@ -2881,8 +2881,12 @@ MonoBehaviour:
   m_Script: {fileID: 11500000, guid: 06ea3b36d2411464885e7f4c811500ba, type: 3}
   m_Name: 
   m_EditorClassIdentifier: 
+  adjustmentHeadInfoPositionY: 0.4
   thisEntity: {fileID: 11474358}
   headInfoPanel: {fileID: 1810890018283428}
+  questSignPrefab: {fileID: 0}
+  stunnedPrefab: {fileID: 1210692136199252, guid: b7f6a405288e864488577ed37d947c9f,
+    type: 2}
   entityNamePrefab: {fileID: 1103406604215184, guid: 122b3e6a24544db4c8f1301f218f6f69,
     type: 2}
   guildNamePrefab: {fileID: 1402474641100108, guid: 1ff01c37d7068b640a9661f53fe0be92,
@@ -2891,9 +2895,6 @@ MonoBehaviour:
     type: 2}
   headInfoPanelImage: {fileID: 114686614959182120}
   targetSprite: {fileID: 21300000, guid: 8335770f2b63ba54c980795b9849e16f, type: 3}
-  canvasHeadInfo: {fileID: 1127267932091858}
-  capsuleCollider: {fileID: 136238104041917154}
-  adjustmentHeadInfoPosition: 0.4
 --- !u!114 &114686614959182120
 MonoBehaviour:
   m_ObjectHideFlags: 1
