@@ -307,13 +307,17 @@ MonoBehaviour:
   currentSkill: -1
   _effectMount: {fileID: 4359707572896818}
   _gold: 0
-  nameOverlay: {fileID: 10212272}
-  stunnedOverlay: {fileID: 102339729772122364}
+  nameOverlay: {fileID: 0}
+  stunnedOverlay: {fileID: 0}
   inSafeZone: 0
+  nameDefaultColor: {r: 1, g: 1, b: 1, a: 1}
+  nameOffenderColor: {r: 1, g: 0, b: 1, a: 1}
+  nameMurdererColor: {r: 1, g: 0, b: 0, a: 1}
+  namePartyColor: {r: 0.341, g: 0.965, b: 0.702, a: 1}
   chat: {fileID: 11401424}
   avatarCamera: {fileID: 20985865562952620}
   networkNavMeshAgent: {fileID: 114131598050958936}
-  guildOverlay: {fileID: 102109922032571540}
+  guildOverlay: {fileID: 0}
   guildOverlayPrefix: '['
   guildOverlaySuffix: ']'
   nameOverlayDefaultColor: {r: 1, g: 1, b: 1, a: 1}
@@ -958,7 +962,7 @@ GameObject:
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
   m_StaticEditorFlags: 0
-  m_IsActive: 1
+  m_IsActive: 0
 --- !u!1 &1375187087648248
 GameObject:
   m_ObjectHideFlags: 1
@@ -2729,8 +2733,12 @@ MonoBehaviour:
   m_Script: {fileID: 11500000, guid: 06ea3b36d2411464885e7f4c811500ba, type: 3}
   m_Name: 
   m_EditorClassIdentifier: 
+  adjustmentHeadInfoPositionY: 0.4
   thisEntity: {fileID: 11460454}
   headInfoPanel: {fileID: 1039665079836320}
+  questSignPrefab: {fileID: 0}
+  stunnedPrefab: {fileID: 1210692136199252, guid: b7f6a405288e864488577ed37d947c9f,
+    type: 2}
   entityNamePrefab: {fileID: 1103406604215184, guid: 122b3e6a24544db4c8f1301f218f6f69,
     type: 2}
   guildNamePrefab: {fileID: 1402474641100108, guid: 1ff01c37d7068b640a9661f53fe0be92,
@@ -2739,9 +2747,6 @@ MonoBehaviour:
     type: 2}
   headInfoPanelImage: {fileID: 114224293611511148}
   targetSprite: {fileID: 21300000, guid: 8335770f2b63ba54c980795b9849e16f, type: 3}
-  canvasHeadInfo: {fileID: 1850185448624676}
-  capsuleCollider: {fileID: 136824822290913060}
-  adjustmentHeadInfoPosition: 0.4
 --- !u!114 &114549291645525742
 MonoBehaviour:
   m_ObjectHideFlags: 1
