@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: b7f6a405288e864488577ed37d947c9f
+NativeFormatImporter:
+  externalObjects: {}
+  mainObjectFileID: 100100000
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
